proper ignore for bower.json

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,10 @@
   "name": "bower-skrollr",
   "version": "0.6.21",
   "main": "./skrollr.js",
+  "ignore": [
+    "bower.json"
+    "README.md"
+  ],
   "dependencies": {
   }
 }
